# dfloat11_tt

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INVESTIGATION.md  Makefile  PIPELINE.md  README.md  REPRODUCE.md  RESULTS.md  __init__.py  prompt.MD  pyproject.toml
compress/: FORMAT.md  __init__.py  __main__.py  bundle.py  compressor.py  reference_decoder.py
eval/: __init__.py  __main__.py  runner.py  test_benchmarks.py  test_bit_identity.py  test_memory.py  test_output_equivalence.py  test_perf.py
eval/configs/: llama-3.1-8b.yaml  llama-3.2-1b-full.yaml  llama-3.2-1b-linears.yaml  llama-3.2-1b-smoke.yaml  llama-3.2-1b.yaml  mistral-small.yaml  qwen2.5-0.5b-full.yaml  qwen2.5-0.5b-linears.yaml  qwen3-8b.yaml  smollm2-135m-full.yaml  smollm2-135m-linears.yaml  smollm2-135m-one-layer-smoke.yaml
eval/prompts/: smoke_prompt.txt
host/: df11_op.cpp  df11_op.hpp
kernels/: decompress_df11.cpp  df11_common.hpp  reader_df11.cpp  writer_df11.cpp
nn/: __init__.py  _df11_split.py  df11_block.py  df11_embedding.py  df11_linear.py  hf_patch.py  tt_linear.py
op/: dfloat11_decompress.cpp  dfloat11_decompress.hpp  pybind.cpp
results/: aggregate.json
results/HuggingFaceTB__SmolLM2-135M-Instruct/: report.md  summary.json
results/HuggingFaceTB__SmolLM2-135M-Instruct/raw/: output_equivalence.json
results/llama-3.2-1b-linears/: report.md  summary.json
results/llama-3.2-1b-linears/raw/: output_equivalence.json
results/qwen2.5-0.5b-full/: report.md  summary.json
results/qwen2.5-0.5b-full/raw/: output_equivalence.json
results/qwen2.5-0.5b-linears/: summary.json
results/qwen2.5-0.5b-linears/raw/: output_equivalence.json
scripts/: run_llama3_2_1b_pipeline.sh  run_llm_smoke.sh  run_qwen2_5_0_5b_pipeline.sh  run_smollm2_135m_pipeline.sh
tests/: test_format_roundtrip.py  test_huffman.py  test_kernel_smoke.py  test_lut_hierarchy.py
viz/: README.md  dfloat11_tt_presentation.ipynb  server.py
viz/templates/: index.html
