[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dfloat11-tt"
version = "0.1.0"
description = "DFloat11 lossless LLM compression ported to Tenstorrent Blackhole"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "transformers>=4.40",
    "datasets>=2.18",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "lm-eval>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dfloat11_tt*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
